			irker history 

1.11 @
  Code is now fully Unicode-safe.

1.10 @ 2012-10-09
  Expire disconnected connections if they aren't needed or can't reconnect.
  Eventlet support removed - didn't play well with the library mutex.

1.9 @ 2012-10-08
  Proper mutex locks prevent an occasional thread crash on session timeout.
  There's now systemd installation support for irkerd.

1.8 @ 2012-10-06
  It's now possible to send to nick URLs.
  Cope gracefully if an IRC server dies or hangs during the nick handshake.

1.7 @ 2012-10-05
  Optional metadata filtering with a user-specified command.
  irkerd code is now armored against IRC library errors in the delivery threads.

1.6 @ 2012-10-04
  In 1.5 trying to appease pylint broke the Mercurial hook.
  Added credits for contributors in hacking.txt.
  Fix the aging out of connections when we hit a resource limit.

1.5 @ 2012-10-03
  Mercurial support.
  Shorten nick negotiation by choosing a random nick base from a large range.
  Make irkerd exit cleanly on control-C.

1.4 @ 2012-10-02
  Graceful handling of server disconnects and kicks.
  Distribution now inclues an installable irkerd plist for Mac OS/X.
  The color variable is no longer boolean; may be miRC or ANSI.
  The installation instructions for irkerhook.py have changed!

1.3 @ 2012-10-01
  Support for an irker.conf file to set irkerhook variables under Subversion.
  Color highlighting of notification fields can be enabled. 
  irkerhook.py now has its own manual page.
  Added channelmax variable for rate-limiting.
  irkerd now uses green threads, with much lower overhead.
  Fix a bug in handling of channel names with no prefix.

1.2 @ 2012-09-30
  All segments of a message with embedded newlines are now transmitted.
  Message reduction - irkerhook drops the filelist on excessively long ones.
  Shell quote hardening in irkerhook.py and some anti-DoS logic.

1.1 @ 2012-09-28
  Add a delay to avoid threads spinning on the empty-queue-check, eating CPU.